# altegra

./: Cargo.toml
src/: cache.rs  locator.rs  main.rs  models.rs  normalization.rs  parser.rs  test_data.rs
src/models/: alternator.rs  common.rs  mod.rs  order.rs  vehicle.rs
test_data/: .~lock.zlecenia.xls#  old-zlecenia.xls  zlecenia.xls
