[package]
name = "altegra"
version = "0.1.0"
authors = ["niedzwiedzwo@gmail.com <niedzwiedzwo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
calamine = "*"
walkdir = "2"
dirs = "2.0.2"
