[package]
name = "altegra"
version = "0.1.0"
authors = ["niedzwiedzwo@gmail.com <niedzwiedzwo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
calamine = "*"
walkdir = "2"
dirs = "2.0.2"
regex = "1"
lazy_static = "1.4.0"
futures = "0.3.1"
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
chrono = "0.4.10"
anyhow = "1.0.23"
md5 = "0.7.0"
snafu = "0.6.0"
